Fix bug with sizing of notes grid on small screens and phones

--- a/src/styles/category.module.css
+++ b/src/styles/category.module.css
@@ -118,3 +118,9 @@
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
 }
+
+@media (max-width: 25rem) {
+    .subcategories {
+        grid-template-columns: none;
+    }
+}
